objects/product__c.object
<CustomObject>
    <description>case study of approval process</description>
    <label>product</label>
    <nameField>
        <displayFormat>PID-{0000}</displayFormat>
        <label>Product ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Type__c</fullName>
        <description>approval process case study</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Models__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Split</fullName>
                </value>
                <value>
                    <fullName>Window</fullName>
                </value>
                <value>
                    <fullName>LCD</fullName>
                </value>
                <value>
                    <fullName>LED</fullName>
                </value>
                <value>
                    <fullName>Top Load</fullName>
                </value>
                <value>
                    <fullName>Front Load</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>approval process</description>
        <label>Price</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Models__c</fullName>
        <label>Models</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Brand_name__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SAC001</fullName>
                </value>
                <value>
                    <fullName>SAC002</fullName>
                </value>
                <value>
                    <fullName>SAC003</fullName>
                </value>
                <value>
                    <fullName>LAC001</fullName>
                </value>
                <value>
                    <fullName>LAC002</fullName>
                </value>
                <value>
                    <fullName>LAC003</fullName>
                </value>
                <value>
                    <fullName>HAC001</fullName>
                </value>
                <value>
                    <fullName>HAC002</fullName>
                </value>
                <value>
                    <fullName>HAC003</fullName>
                </value>
                <value>
                    <fullName>STV001</fullName>
                </value>
                <value>
                    <fullName>STV002</fullName>
                </value>
                <value>
                    <fullName>STV003</fullName>
                </value>
                <value>
                    <fullName>LTV001</fullName>
                </value>
                <value>
                    <fullName>LTV002</fullName>
                </value>
                <value>
                    <fullName>LTV003</fullName>
                </value>
                <value>
                    <fullName>HTV001</fullName>
                </value>
                <value>
                    <fullName>HTV002</fullName>
                </value>
                <value>
                    <fullName>HTV003</fullName>
                </value>
                <value>
                    <fullName>SWM001</fullName>
                </value>
                <value>
                    <fullName>SWM002</fullName>
                </value>
                <value>
                    <fullName>SWM003</fullName>
                </value>
                <value>
                    <fullName>LWM001</fullName>
                </value>
                <value>
                    <fullName>LWM002</fullName>
                </value>
                <value>
                    <fullName>LWM003</fullName>
                </value>
                <value>
                    <fullName>HWM001</fullName>
                </value>
                <value>
                    <fullName>HWM002</fullName>
                </value>
                <value>
                    <fullName>HWM003</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Awaiting Approval</fullName>
                </value>
                <value>
                    <fullName>Ready For Sale</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Smart_TV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>case study</description>
        <label>Smart TV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automatic__c</fullName>
        <label>Automatic Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>semi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand_name__c</fullName>
        <description>approval process case study</description>
        <label>Brand name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Samsung</fullName>
                </value>
                <value>
                    <fullName>LG</fullName>
                </value>
                <value>
                    <fullName>Haier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Screen_size__c</fullName>
        <description>case study</description>
        <label>Screen size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacity_in_KG__c</fullName>
        <label>Capacity (in KG)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consumer_email__c</fullName>
        <formula>CreatedBy.Contact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consumer email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_Units__c</fullName>
        <description>Approval process case study</description>
        <label>Available Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacity_in_Tons__c</fullName>
        <description>case study</description>
        <label>Capacity (in Tons)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warrenty_period_in_years__c</fullName>
        <description>Approval process case study</description>
        <label>Warrenty period (in years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>AC_product</fullName>
        <active>true</active>
        <description>case study of approval process</description>
        <label>AC product</label>
    </recordTypes>
    <recordTypes>
        <fullName>TV_product</fullName>
        <active>true</active>
        <description>case study of approval process</description>
        <label>TV product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Washing_machine_products</fullName>
        <active>true</active>
        <description>case study of approval process</description>
        <label>Washing machine  products</label>
    </recordTypes>
    <validationRules>
        <fullName>Warrenty_year_rule</fullName>
        <active>true</active>
        <description>Approval case study</description>
        <errorConditionFormula>Warrenty_period_in_years__c  &gt;= 15|| (  LEN(  TEXT(Warrenty_period_in_years__c)  )   &gt;  3  )</errorConditionFormula>
        <errorMessage>please enter valid number of year</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Price_value_is_not_null</fullName>
        <active>true</active>
        <description>approval process case study</description>
        <errorConditionFormula>ISNULL( Price__c)   ||   ISBLANK(Price__c)</errorConditionFormula>
        <errorMessage>it should not be blank or null</errorMessage>
    </validationRules>
</CustomObject>